@startuml rescateDePatitas

abstract class Repositorio {
  repositorio
  registrar()
  borrar()
  buscar()
  filtrar()
  cantidadDeRegistros()
  contar()
  existe()
  vaciar()
  
}

class RepositorioDueños{
  duenioDe()
}


class RepositorioMascotas{
  obtenerDueñoDe()
}


class RepositorioRescatesConChapita{
  últimasMascotasEncontradas()
  confirmarMascotaEncontrada()
}

class RepositorioCaracteristicas{
  existeCaracteristica()
  borrarCaracteristica()
  obtenerCaracteristica()
  opcionesDe()
}

class RepositorioAdministradores{

}

class RepositorioValidaciones{
  validatePassword()
}


class RepositorioRescatesSinChapita{
  publicacionesPendientes()
  publicacionesAprobadas()
}


class RepositorioAsociaciones{
  obtenerLaMasCercana()
}


class RepositorioAdopcion{}
class RepositorioSolicitudesAdopcion{}

RepositorioAsociaciones        -u-> "*" Asociacion
RepositorioRescatesSinChapita  -u-> "*" Publicacion
RepositorioDueños              -d-> "*" Dueño
RepositorioMascotas            -d-> "*" Mascota
RepositorioRescatesConChapita  -d-> "*" Rescate
RepositorioAdministradores     -d-> "*" Administrador
RepositorioCaracteristicas     -r-> "*" String
RepositorioValidaciones        -l-> "*" Validation
RepositorioAdopcion            -u-> DarEnAdopcion
RepositorioSolicitudesAdopcion -u-> SolicitudAdopcion


RepositorioAsociaciones        -d-|> Repositorio
RepositorioRescatesSinChapita  -d-|> Repositorio
RepositorioValidaciones        -r-|> Repositorio
RepositorioDueños              -u-|> Repositorio
RepositorioRescatesConChapita  -u-|> Repositorio
RepositorioMascotas            -u-|> Repositorio
RepositorioCaracteristicas     -l-|> Repositorio
RepositorioAdministradores     -u-|> Repositorio
RepositorioAdopcion            --|> Repositorio
RepositorioSolicitudesAdopcion --|> Repositorio
@enduml